--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<select name="language" id="language">
 									<option value="default">EN</option>
 									<option value="Bangla">BN</option>
-									<option value="ALGERIA">Arb</option>
+									<option value="ALGERIA">Ab</option>
 								</select>
 							</li>
 							<li class="select-opt">
